# MathLogic-CourseWork

./: README.md
ML_CourseWork/: CMakeLists.txt  Direction.h  Parameters.h  Utils.cpp  Utils.h  main.cpp
ML_CourseWork/conditions/: cond1.txt  cond2.txt  cond3.txt  cond4.txt
ML_CourseWork/conditions/12ls/: cond1.txt  cond2.txt  cond3.txt  cond4.txt
ML_CourseWork/conditions/8sls/: cond1.txt  cond3.txt  cond4.txt
ML_CourseWork/conditions/final/: cond1.txt  cond2.txt  cond4.txt
ML_CourseWork/tests/: main_test.cpp
